third_party/rust/thiserror/v1/crate/tests/ui/source-enum-not-error.stderr
error[E0599]: the method `as_dyn_error` exists for reference `&NotError`, but its trait bounds were not satisfied
   --> tests/ui/source-enum-not-error.rs:10:9
    |
4   | pub struct NotError;
    | --------------------
    | |
    | doesn't satisfy `NotError: AsDynError`
    | doesn't satisfy `NotError: std::error::Error`
...
10  |         source: NotError,
    |         ^^^^^^ method cannot be called on `&NotError` due to unsatisfied trait bounds
    |
    = note: the following trait bounds were not satisfied:
            `NotError: std::error::Error`
            which is required by `NotError: AsDynError`
            `&NotError: std::error::Error`
            which is required by `&NotError: AsDynError`
note: the following trait must be implemented
   --> $RUST/std/src/error.rs
    |
    | / pub trait Error: Debug + Display {
    | |     /// The lower-level source of this error, if any.
    | |     ///
    | |     /// # Examples
...   |
    | |     }
    | | }
    | |_^
